menambahkan backend food ordering

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 #nama service
-SERVICE_NAME=Eduwork API Service
+SERVICE_NAME=Eduwork API Server
 
 #key super rahasia
-SECRET_KEY=edihartono
+SECRET_KEY=ayules
 
 #konfigurasi database
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=27017
-DB_USER=pelitanurnajmina
+DB_USER=ayulestari
 DB_PASS=12345678
-DB_NAME=eduwork
+DB_NAME=mongodb
